# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.

static_library("test_dynlink") {
  sources = [
    "It_los_dynlink.c",
    "It_los_dynlink_001.c",
    "It_los_dynlink_002.c",
    "It_los_dynlink_003.c",
    "It_los_dynlink_004.c",
    "It_los_dynlink_005.c",
    "It_los_dynlink_006.c",
    "It_los_dynlink_007.c",
    "It_los_dynlink_008.c",
    "It_los_dynlink_009.c",
    "It_los_dynlink_010.c",
    "It_los_dynlink_011.c",
    "It_los_dynlink_012.c",
    "It_los_dynlink_013.c",
    "It_los_dynlink_014.c",
    "It_los_dynlink_015.c",
    "It_los_dynlink_016.c",
    "It_los_dynlink_017.c",
    "It_los_dynlink_018.c",
    "It_los_dynlink_019.c",
    "It_los_dynlink_020.c",
  ]

  include_dirs = [
    "../../../../kernel/include",
    "../../../../kernel/arch/include",
    "../../../include",
    "../../../../utils",
    "../../../../components/dynlink",
    ".",
    "../../../../components/cpup",
    "//third_party/bounds_checking_function/include",
  ]
}
