# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

static_library("test_hwi") {

    sources = [
        "it_los_hwi_001.c",
        "it_los_hwi_002.c",
        "it_los_hwi_003.c",
        "it_los_hwi_004.c",
        "it_los_hwi_005.c",
        "it_los_hwi_006.c",
        "it_los_hwi_007.c",
        "it_los_hwi_008.c",
        "it_los_hwi_009.c",
        "it_los_hwi_010.c",
        "it_los_hwi_011.c",
        "it_los_hwi_012.c",
        "it_los_hwi_013.c",
        "it_los_hwi_014.c",
        "it_los_hwi_015.c",
        "it_los_hwi_016.c",
        "it_los_hwi_017.c",
        "it_los_hwi_018.c",
        "it_los_hwi_019.c",
        "it_los_hwi_020.c",
        "it_los_hwi_021.c",
        "it_los_hwi_022.c",
        "it_los_hwi_023.c",
        "it_los_hwi_024.c",
        "it_los_hwi_025.c",
        "it_los_hwi_026.c",
        "it_los_hwi_027.c",
        "it_los_hwi_028.c",
        "it_los_hwi_029.c",
        "it_los_hwi_030.c",
        "it_los_hwi_031.c",
        "it_los_hwi_032.c",
        "it_los_hwi_033.c",
        "it_los_hwi_034.c",
        "It_los_hwi.c",
        "LLT_los_hwi_035.c",
    ]

    include_dirs = [
        "It_los_hwi.h",
        "../../../include/",
        "//kernel/liteos_m/kernel/include",
        "//kernel/liteos_m/kernel/base/include",
        "//build/compiler/arm-none-eabi/linux/arm-none-eabi/include",
        "//build/compiler/arm-none-eabi/linux/lib/gcc/arm-none-eabi/5.4.1/include/",
        "//build/compiler/arm-none-eabi/linux/lib/gcc/arm-none-eabi/5.4.1/include-fixed/",
        "//kernel/liteos_m/arch/arm/cortex-m/include",
        "//kernel/liteos_m/components/cmsis",
        "//vendor/huawei/watchgt/devkit/hal/include",
    ]
}
