# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

static_library("test_mem") {

    sources = [
        "It_los_list_001.c",
        "It_los_mem_001.c",
        "It_los_mem_002.c",
        "It_los_mem_003.c",
        "It_los_mem_004.c",
        "It_los_mem_005.c",
        "It_los_mem_006.c",
        "It_los_mem_007.c",
        "It_los_mem_008.c",
        "It_los_mem_009.c",
        "It_los_mem_010.c",
        "It_los_mem_011.c",
        "It_los_mem_012.c",
        "It_los_mem_013.c",
        "It_los_mem_014.c",
        "It_los_mem_015.c",
        "It_los_mem_016.c",
        "It_los_mem_017.c",
        "It_los_mem_018.c",
        "It_los_mem_019.c",
        "It_los_mem_020.c",
        "It_los_mem_035.c",
        "It_los_mem_036.c",
        "It_los_mem_037.c",
        "It_los_mem_038.c",
        "It_los_mem_040.c",
        "It_los_mem_045.c",
        "it_los_mem.c",
        "It_los_tick_001.c",
        "LLT_los_tick_001.c",
    ]

    include_dirs = [
        "It_los_mem.h",
        "../../../include/",
        "//kernel/liteos_m/kernel/include",
        "//kernel/liteos_m/kernel/base/include",
        "//build/compiler/arm-none-eabi/linux/arm-none-eabi/include",
        "//build/compiler/arm-none-eabi/linux/lib/gcc/arm-none-eabi/5.4.1/include/",
        "//build/compiler/arm-none-eabi/linux/lib/gcc/arm-none-eabi/5.4.1/include-fixed/",
        "//kernel/liteos_m/arch/arm/cortex-m/include",
        "//kernel/liteos_m/components/cmsis",
        "//vendor/huawei/watchgt/devkit/hal/include",
    ]
}
