# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

static_library("test_mux") {

    sources = [
        "It_los_mutex_001.c",
        "It_los_mutex_002.c",
        "It_los_mutex_003.c",
        "It_los_mutex_004.c",
        "It_los_mutex_005.c",
        "It_los_mutex_006.c",
        "It_los_mutex_007.c",
        "It_los_mutex_008.c",
        "It_los_mutex_009.c",
        "It_los_mutex_010.c",
        "It_los_mutex_011.c",
        "It_los_mutex_012.c",
        "It_los_mutex_013.c",
        "It_los_mutex_014.c",
        "It_los_mutex_015.c",
        "It_los_mutex_016.c",
        "It_los_mutex_017.c",
        "It_los_mutex_018.c",
        "It_los_mutex_019.c",
        "It_los_mutex_020.c",
        "It_los_mutex_021.c",
        "It_los_mutex_022.c",
        "It_los_mutex_023.c",
        "It_los_mutex_024.c",
        "It_los_mutex_025.c",
        "It_los_mux_026_1.c",
        "It_los_mux_026.c",
        "It_los_mux_027_1.c",
        "It_los_mux_027.c",
        "It_los_mux_028.c",
        "It_los_mux_029_1.c",
        "It_los_mux_029.c",
        "It_los_mux_030_1.c",
        "It_los_mux_030.c",
        "It_los_mux_031_1.c",
        "It_los_mux_031.c",
        "It_los_mux_032.c",
        "It_los_mux_033_1.c",
        "It_los_mux_033.c",
        "It_los_mux_034_1.c",
        "It_los_mux_034.c",
        "It_los_mux_035.c",
        "It_los_mux_036.c",
        "It_los_mux_037.c",
        "It_los_mux_038.c",
        "It_los_mux_039.c",
        "It_los_mux.c",
    ]

    include_dirs = [
        "It_los_mux.h",
        "../../../include/",
        "//kernel/liteos_m/kernel/include",
        "//kernel/liteos_m/kernel/base/include",
        "//build/compiler/arm-none-eabi/linux/arm-none-eabi/include",
        "//build/compiler/arm-none-eabi/linux/lib/gcc/arm-none-eabi/5.4.1/include/",
        "//build/compiler/arm-none-eabi/linux/lib/gcc/arm-none-eabi/5.4.1/include-fixed/",
        "//kernel/liteos_m/arch/arm/cortex-m/include",
        "//kernel/liteos_m/components/cmsis",
        "//vendor/huawei/watchgt/devkit/hal/include",
    ]
}
