# Copyright (c) 2023-2023 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

static_library("fs") {
  sources = [
    "api/posix_fs_access_test.c",
    "api/posix_fs_close_test.c",
    "api/posix_fs_closedir_test.c",
    "api/posix_fs_fstat_test.c",
    "api/posix_fs_fsync_test.c",
    "api/posix_fs_ftruncate_test.c",
    "api/posix_fs_lseek_test.c",
    "api/posix_fs_mkdir_test.c",
    "api/posix_fs_open_test.c",
    "api/posix_fs_opendir_test.c",
    "api/posix_fs_pread_test.c",
    "api/posix_fs_pwrite_test.c",
    "api/posix_fs_read_test.c",
    "api/posix_fs_readdir_test.c",
    "api/posix_fs_rename_test.c",
    "api/posix_fs_rmdir_test.c",
    "api/posix_fs_stat_test.c",
    "api/posix_fs_statfs_test.c",
    "api/posix_fs_unlink_test.c",
    "api/posix_fs_write_test.c",
    "full/posix_fs_full_test.c",
    "posix_fs_func_test.c",
    "pressure/posix_fs_pressure_test.c",
  ]

  include_dirs = [
    ".",
    "../",
    "../../../../include",
  ]
}
